# NST-Streamlit-website

./: .gitignore  API.py  Gatys.py  UI_components.py  app.py  components.py  data.py  download_models.py  gatys.py  helper.py  huang.py  image_transfer.py  johnson.py  johnson_helper.py  new_video.py  page_config.py  pyproject.toml  readMe.md  reexport.ipynb  requirements.txt  setup.sh  setup_instructions.md  styles.py  tabs.py  tabs_display.py  turn.py  ui_video.py  video_helper.py  video_transfer.py  video_ui..py  webcam.py  webcam_methods.py
.devcontainer/: Dockerfile
.streamlit/: config.toml
assets/style/: mosaic - Shortcut.lnk
exported_model/variables/: variables.index
forward_model/self_portrait/: desktop.ini
helper/: UI_components.py  adain_data.py  components.py  data.py  display_image_details.py  gatys.py  helper.py  image_transfer.py  johnson.py  johnson_helper.py  load_model.py  model_dirs.py  model_validation.py  page_config.py  style_transfer.py  styles.py  tabs_display.py  turn.py  ui_video.py  video_helper.py  video_transfer.py  webcam.py  webcam_methods.py
main_model/AdaIN/variables/: variables.index
model_scripts/: AdaIN.py
tabs/: default_tab.py  gatys_tab.py  huang_tab.py  johnson_tab.py  upload_types.py  video_tab.py
video_methods/: ffmpeg_helper.py  video_interface.py  video_stream.py
